MCA Dev/src/objects/FO_Email_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores values for Email stips and Email offers default recipients</description>
    <fields>
        <fullName>Field_Set_API_Name__c</fullName>
        <label>Field Set API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Sales_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISO Sales Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merchant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_API_Name_for_Field_Set__c</fullName>
        <label>Object API Name for Field Set</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_to_Address__c</fullName>
        <description>Allows to override the reply to address, if blank will default to &apos;From Address&apos;</description>
        <inlineHelpText>Enter McaApp__Reply_to_Address__c or any Opportunity email field if the &apos;Reply To&apos; address if it should be different that than the &apos;From Address&apos; email.</inlineHelpText>
        <label>Reply-to Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_s_Name__c</fullName>
        <description>Allows to override the Name of the Sender, if blank will default to the name of the &apos;From Address&apos; email.</description>
        <inlineHelpText>Enter McaApp__Sender_s_Name__c or any Opportunity text field if the &apos;sender&apos;s name&apos; if it should be different from the name of the &apos;From Address&apos; email.</inlineHelpText>
        <label>Sender&apos;s Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>FO Email Settings</label>
</CustomObject>